--- a/app/views/queryInterface2.html
+++ b/app/views/queryInterface2.html
@@ -5,7 +5,7 @@
     <head>
         <title>Query the social web</title>
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_t3_wvQ1AxaFSDjZMifE7kVaPIvHEhSA"></script>-->
         <script src="/javascripts/javascripts.js" type = "text/javascript"></script>
     </head>
