--- a/app/views/queryInterface2.html
+++ b/app/views/queryInterface2.html
@@ -67,6 +67,11 @@
                         </label>
 
                         <label>
+                            <span>User Mentions:</span>
+                            <input id="usermentions" name="usermentions" type="text" placeholder="Example: @ManUtd" />
+                        </label>
+                        
+                        <label>
                             <span>Count:</span>
                             <input id="count" name="count" type="number" placeholder="Example: 100" min="1" max="500"/>
                         </label> 
