--- a/app/views/queryInterface2.html
+++ b/app/views/queryInterface2.html
@@ -76,6 +76,12 @@
                             <input id="count" name="count" type="number" placeholder="Example: 100" min="1" max="500"/>
                         </label> 
 
+                        <label>
+                            <span>Search from database only:
+                                <input id="dbonly" name="dbonly" type="checkbox" />
+                            </span>
+                        </label>
+                        
                         <section class="twitterform">
                           <label>
                               <span>&nbsp;</span> 
