--- a/app/views/queryInterface.html
+++ b/app/views/queryInterface.html
@@ -1,78 +1,38 @@
 <!DOCTYPE html>
-<!-- browser key - AIzaSyBhdAk0Ki3azlEwLYPnBIDFyGWoFxH4Zb0 -->
-<!-- server key - AIzaSyB_t3_wvQ1AxaFSDjZMifE7kVaPIvHEhSA -->
 <html class="home" lang="en">
     <head>
         <title>Query the social web</title>
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-        <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_t3_wvQ1AxaFSDjZMifE7kVaPIvHEhSA"></script>-->
         <script src="/javascripts/javascripts.js" type = "text/javascript"></script>
-        <script>
-            var tweets = <%= tweets %>;
-            var coord = <%= JSON.stringify(geo) %>;
-            var words = <%= JSON.stringify(commonWords) %>;
-            var users = <%= activeUsers %>;
-            var users_com = <%= usersCommon %>;
-
-            function GenerateTable() {
-             
-                //Create a HTML Table element.
-                var table = document.createElement("TABLE");
-                table.border = "1";
-             
-                //Get the count of columns.
-                var columnCount = tweets[0].length;
-             
-                //Add the header row.
-                var row = table.insertRow(-1);
-                for (var i = 0; i < columnCount; i++) {
-                    var headerCell = document.createElement("TH");
-                    headerCell.innerHTML = tweets[0][i];
-                    row.appendChild(headerCell);
-                }
-             
-                //Add the data rows.
-                for (var i = 1; i < tweets.length; i++) {
-                    row = table.insertRow(-1);
-                    for (var j = 0; j < columnCount; j++) {
-                        var cell = row.insertCell(-1);
-                        cell.innerHTML = tweets[i][j];
-                    }
-                }
-             
-                var dvTable = document.getElementById("tweetsTable");
-                dvTable.innerHTML = "";
-                dvTable.appendChild(table);
-            }
-            
-            GenerateTable();
-
-            $(document).ready(function (){
-                for (var t in tweets) {
-                var row = $('<row></row>')
-                row.append('<th style="border:1px solid black">' + t + '</th><td style="border:1px solid black">' + tweets[t][0] + '</td>')
-                $("#tweetTable").append(row)
-                }
-                for (var i in words) {
-                    var row = $('<row></row>')
-                    row.append('<th style="border:1px solid black">' + words[i][0] + '</th><td style="border:1px solid black">' + words[i][1] + '</td>')
-                    $("#commonTable").append(row)
-                }
-                for (var j in users) {
-                    var row = $('<row></row>')
-                    row.append('<th style="border:1px solid black">' + users[j][0] + '</th><td style="border:1px solid black">' + users[j][1] + '</td>')
-                    $("#userTable").append(row)
-                }
-                for (var s in users_com) {
-                    var row = $('<row></row>')
-                    row.append('<th style="border:1px solid black">' + users_com[s][0] + '</th><td style="border:1px solid black">' + users_com[s][1] + '</td>')
-                    $("#ucommonTable").append(row)
-                }
-            });
-        </script>
     </head>
     <body onLoad="doSlideshow(); window.scroll(0, 1000);">
+        <script>
+            var tweets = "{ &#34;PaoIotics&#34;: [&#34;@JoshCannon99 @hanks_h @MCFC it&#39;s QPR. He&#39;s done nothing big since that other than 1 game vs Bayern.&#34;],&#34;YadavDhital&#34;: [&#34;RT @ArronMCFC: @YadavDhital @MCFC cheers, for supporting city since 2008 +&#34;],&#34;GoodKunManCity&#34;:[&#34;@Binky_Ferrari @stuff_mcfc @ManCityArmy1894 @cfcMode no I meant since he said failure isn&#39;t an option but look at this season lol&#34;]}"
+   
+            var json = JSON.parse(tweets.replace(/&#34;/g, '\"'));
+            for (var t in tweets) {
+              var row = $('<row></row>');
+              row.append('<th style="border:1px solid black">' + t + '</th><td style="border:1px solid black">' + tweets[t][0]+ '</td>');
+              $("#tweetTable").append(row);
+            }
+            /*
+            for (var i in words) {
+                var row = $('<row></row>')
+                row.append('<th style="border:1px solid black">' + words[i][0] + '</th><td style="border:1px solid black">' + words[i][1] + '</td>')
+                $("#commonTable").append(row)
+            }
+            for (var j in users) {
+                var row = $('<row></row>')
+                row.append('<th style="border:1px solid black">' + users[j][0] + '</th><td style="border:1px solid black">' + users[j][1] + '</td>')
+                $("#userTable").append(row)
+            }
+            for (var s in users_com) {
+                var row = $('<row></row>')
+                row.append('<th style="border:1px solid black">' + users_com[s][0] + '</th><td style="border:1px solid black">' + users_com[s][1] + '</td>')
+                $("#ucommonTable").append(row)
+            }*/
+        </script>
       <form class="logout" name="logout" action="http://localhost:8081/logout" style="position:fixed;right:10px;top:5px;">
           <input type="submit" value="Log Out">
       </form>
@@ -83,7 +43,7 @@
                         <h2>First time using these forms?</h2>
                         <span>+</span>
                         <div class="panel">
-                            <p>Twitter Form<br>Twitter profile: This field is for specifying the twitter profile that you want to return tweets for. For example, 'MCFC' will return tweets from the offical Manchester city twitter account.<br>Key Words: This field is for specifying a key word you want the tweets returned to contain. For example, 'ref' will return all tweets that contain the word ref.<br>Count: This field is for specifying how many tweets you wish to return, note that the maximum is 300.<br>Date: This field is for specifying the date from which to get tweets from. For example, '2015-11-11' will only return tweets after the 11th of novemeber 2015.<br>Distance: This field is for specifying the distance from point in which to eturn tweets. For example, 100km will return tweets from a 100km radius of location, note that if you have entered a premier league teams twitter profile this point is set to the teams stadium.<br>Geo-location: This field is for specifying the longitude and latitude of your search of tweets, this field sets the centeral location of the radius set in the Distance field<br> Map: The map on the right hand side of the screen will display all the tweets that returned a location as a marker on the map. The map also displays the location of all the Premier League teams stadiums.<br>Tweets: The section below the map will fill with all the relevant tweet information, based on your queries, when the form is completed and the "Get Tweets" button is pressed.<br>Extra Information: Below this form is a section that will show you the most common word in the collection of tweets returned, as well as the most active twitter users and their most commonly used words.<br>SPARQL Form: This form allows you to enter a home and away team and then returns the following: A brief description about the club, the home ground and its capacity, a list of both teams managers and players with their nationality, birthdate and position.</p>
+                            Twitter profile: This field is for specifying the twitter profile that you want to return tweets for. For example, 'MCFC' will return tweets from the offical Manchester city twitter account.<br>Key Words: This field is for specifying a key word you want the tweets returned to contain. For example, 'ref' will return all tweets that contain the word ref.<br>Count: This field is for specifying how many tweets you wish to return, note that the maximum is 300.<br> Map: The map on the right hand side of the screen will display all the tweets that returned a location as a marker on the map. The map also displays the location of all the Premier League teams stadiums.<br>Tweets: The section below the map will fill with all the relevant tweet information, based on your queries, when the form is completed and the "Get Tweets" button is pressed.<br>Extra Information: Below this form is a section that will show you the most common word in the collection of tweets returned, as well as the most active twitter users and their most commonly used words.<br>SPARQL Form: This form allows you to enter a home and away team and then returns the following: A brief description about the club, the home ground and its capacity, a list of both teams managers and players with their nationality, birthdate and position.</p>
                         </div>
                     </li>
                 </ul>
@@ -221,8 +181,9 @@
             </div>
             <div class="bottom">
                 <h2>Tweets:</h2>
-                <table id="tweetTable" style="border:1px solid black"></table>
-                <div style="clear: both;"></div>
+                <table id="tweetTable" style="border:1px solid black">
+
+                </table>
             </div>
             <div class="bottom2">
                 <h2>Most common words in the collection and most active users:</h2>
