--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -84,6 +84,43 @@ a {
   text-align: center;
 }
 /*
+* Table styling
+*/
+table {
+  border-collapse:collapse;
+  table-layout: fixed;
+  width: 1400px;
+}
+th, td {
+  border-bottom: 1px solid #FFFFFF;
+  text-align: left;
+  vertical-align: bottom;
+}
+th {
+  height: 50px;
+  padding: 15px;
+  font-size: 20px;
+  color: white; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300; 
+  width: 600px;
+}
+td {
+  padding: 15px;
+  font-size: 15px;
+  color: white; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300; 
+  width: 800px;
+}
+
+.tweetTable{
+  font-size: 10px;
+  color: white; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300; 
+}
+/*
 * Interface wraps
 */ 
 .wrapper{ 
