--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -187,12 +187,44 @@ td {
   margin-top: 10px;
   margin-bottom: 10px;  
 }
+#map{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 500px ;
+  margin-left: auto ;
+  margin-right: auto ;
+  height: 100%;
+  letter-spacing: 1px;  
+  background: rgb(0, 0, 0); /* fallback color */
+  background: rgba(0, 0, 0, 0.7);
+  padding: 10px; 
+  color: white; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300; 
+  text-align: center;
+}
 .right-wrapper{
   float: left;
   margin-left: 20px;
   margin-right: 5px;
   margin-bottom: 10px;
   width: 870px;
+  letter-spacing: 1px;  
+  background: rgb(0, 0, 0); /* fallback color */
+  background: rgba(0, 0, 0, 0.7);
+  padding: 50px; 
+  color: white;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300; 
+  text-align: center;
+  overflow: hidden; 
+}
+.sparql{
+  float: left;
+  margin-left: 20px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+  width: 940px;
   letter-spacing: 1px;  
   background: rgb(0, 0, 0); /* fallback color */
   background: rgba(0, 0, 0, 0.7);
@@ -367,7 +399,7 @@ td {
 * Map canvas styling
 */
 #map-canvas {
-  background-color:#FFD700; 
+  /*background-color:#FFD700;*/
   width:100%; 
   height:200pt;
 }
