--- a/app/views/queryInterface.html
+++ b/app/views/queryInterface.html
@@ -4,9 +4,149 @@
         <title>Query the social web</title>
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-        <script src="/javascripts/javascripts.js" type = "text/javascript"></script>
+        <script src="/javascripts/javascripts.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            // Server variable provided when the form is submitted, array containing all the geolocated tweets returned
+            var coord = <%- geo %>;
+            var length = coord.length;
+
+            // function for initalizing google maps on the page
+            function initialize() {
+                var map;
+                var bounds = new google.maps.LatLngBounds();
+                var mapOptions = {
+                    mapTypeId: 'roadmap'
+                };
+                                
+                // Display the map on the page
+                map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+                map.setTilt(45);
+                    
+                // Server variable provided when the form is submitted, array containing all the geolocated tweets returned
+                var coord = <%- geo %>;
+
+                if (coord == []){
+                    $('#map').append('<h2>No Geolocated tweets returned ... </h2>');
+                }
+
+                // array for pushing the coordinates
+                var coords = [];
+
+                // function to check that coordinates have been returned by getTweets()
+                function checkCoord(){
+                    if (coordAr == []){
+                        return null;
+                    } else {
+                        return coordAr;
+                    }
+                }
+
+                // function for turning coords into just an array of coordinates
+                var coordAr = coord.map(function(o) {
+                  return o.coordinates;
+                })
+                
+                // array containing the locations of each premier league football teams stadium for markers
+                var markers = [
+                  ['Arsenal', 51.555757,-0.108298],
+                  ['AVFCOfficial', 52.509007,-1.884826],
+                  ['afcbournemouth', 50.735238,-1.838293],
+                  ['ChelseaFC', 51.481660,-0.190949],
+                  ['CPFC', 51.398253,-0.085485],
+                  ['Everton', 53.438764,-2.966324],
+                  ['LCFC', 52.620301,-1.143208],
+                  ['LFC', 53.430829,-2.960830],
+                  ['MCFC', 53.483125,-2.200406],
+                  ['ManUtd', 53.463037,-2.291342],
+                  ['NUFC', 54.975350,-1.622575],
+                  ['NorwichCityFC', 52.622042,1.309107], 
+                  ['SouthamptonFC', 50.905739,-1.389905],
+                  ['stokecity', 52.988264,-2.175518],
+                  ['SunderlandAF', 54.914542,-1.388435],
+                  ['SwansOfficial', 51.642730,-3.934489],
+                  ['SpursOfficial', 51.603165,-0.065739],
+                  ['WBAFCofficial', 52.509045,-1.963949],
+                  ['whufc_official', 51.531950,0.039392],
+                  ['WatfordFC', 51.649871,-0.401363],
+                ]
+
+                // Info Window Content for each of the markers 
+                var infoWindowContent = [
+                    ['<div class="info_content">' + '<h4>Emirates Stadium</h4>' + '<p>Home of Arsenal Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Villa Park</h4>' + '<p>Home of Aston Villa Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Dean Court</h4>' + '<p>Home of Bournemouth Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Stamford Bridge</h4>' + '<p>Home of Chelsea Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Selhurst Park</h4>' + '<p>Home of Crystal Palace Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Goodison Park</h4>' + '<p>Home of Everton Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>King Power Stadium</h4>' + '<p>Home of Leicester City Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Anfield</h4>' + '<p>Home of Liverpool Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Etihad Stadium</h4>' + '<p>Home of Manchester City Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Old Trafford</h4>' + '<p>Home of Manchester United Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h3>St James Park </h4>' + '<p>Home of Newcastle United Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Carrow Road</h4>' + '<p>Home of Norwich City Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>St Marys Stadium</h4>' + '<p>Home of Southampton Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Britania Stadium</h4>' + '<p>Home of Stoke City Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Stadium Of Light</h4>' + '<p>Home of Sunderland Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Liberty Stadium</h4>' + '<p>Home of Swansea City Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>White Hart Lane</h4>' + '<p>Home of Tottenham Hotspur Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>The Hawthorns</h4>' + '<p>Home of West Bromich Albion Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Upton Park</h4>' + '<p>Home of West Ham Football Club.</p>' + '</div>'],
+                    ['<div class="info_content">' + '<h4>Vicarage Road</h4>' + '<p>Home of Watford Football Club.</p>' + '</div>']
+                ];
+                    
+                // Display multiple markers on a map
+                var infoWindow = new google.maps.InfoWindow(), markers, i;
+                var infoWindowt = new google.maps.InfoWindow(), coordAr, i;
+
+                // Loop through the array of markers for stadiums & place each one on the map  
+                for( i = 0; i < markers.length; i++ ) {
+                    var position = new google.maps.LatLng(markers[i][1], markers[i][2]);
+                    bounds.extend(position);
+                    marker = new google.maps.Marker({
+                        position: position,
+                        map: map,
+                        title: markers[i][0]
+                    });
+                    
+                    // Allow each marker to have an info window    
+                    google.maps.event.addListener(marker, 'click', (function(marker, i) {
+                        return function() {
+                            infoWindow.setContent(infoWindowContent[i][0]);
+                            infoWindow.open(map, marker);
+                        }
+                    })(marker, i));
+                }
+
+                // Loop through the array of tweet coords & place each one on the map  
+                for( i = 0; i < coordAr.length; i++ ) {
+                    var position = new google.maps.LatLng(coordAr[i][0], coordAr[i][1]);
+                    bounds.extend(position);
+                    marker = new google.maps.Marker({
+                        position: position,
+                        map: map
+                    });
+
+                    // Allow each marker to have an info window    
+                    google.maps.event.addListener(coordAr, 'click', (function(coordAr, i) {
+                        return function() {
+                            infoWindow.setContent('<div class="info_content">' + '<h4>Tweet</h4>' + '<p>Location of one of the tweets returned.</p>' + '</div>');
+                            infoWindow.open(map, coordAr);
+                        }
+                    })(coordAr, i));
+                }
+
+                // Center the map fitting all markers on the screen
+                map.fitBounds(bounds);
+
+                // Set the zoom level once the fitBounds function runs
+                var boundsListener = google.maps.event.addListener((map), 'bounds_changed', function(event) {
+                    this.setZoom(5);
+                    google.maps.event.removeListener(boundsListener);
+                });
+            }
+        </script>
     </head>
-    <body onLoad="doSlideshow(); window.scroll(0, 1000);">
+    <body onLoad="doSlideshow(); window.scroll(0, 900);">
       <form class="logout" name="logout" action="http://localhost:8081/logout" style="position:fixed;right:10px;top:5px;">
           <input type="submit" value="Log Out">
       </form>
@@ -159,17 +299,18 @@
             <div class="map-wrapper">
                 <div id="map-canvas" style="width: 100%; height: 332px;"></div>
             </div>
+            <div id="map"></div>
             <div class="bottom">
                 <h2>Tweets:</h2>
                 <table id="tweetTable" class="tweetTable"></table>
             </div>
             <div class="bottom2">
-                <h2>10 most active users:</h2>
+                <h2>Ten most active users:</h2>
                 <table id="userTable"></table>
                    <div style="clear: both;"></div>
             </div>
             <div class="bottom3">
-                <h2>20 most common words in the collection:</h2>
+                <h2>Twenty most common words in the collection:</h2>
                 <table id="commonTable"></table>
                 <div style="clear: both;"></div>
             </div>
@@ -180,6 +321,14 @@
             </div>
         </div>
         <script type = "text/javascript">
+
+            // indicate if any geolocated tweets were returned
+            if (length > 0){
+                $('#map').append('<h2>' + length + ' geolocated tweets returned ... </h2>');
+            } else {
+                $('#map').append('<h2>No geolocated tweets returned ... </h2>');
+            }
+
             // Server variables
             var tweets = <%- JSON.stringify(tweets) %> ;
             var users = <%- JSON.stringify(activeUsers) %>;
