--- a/app/views/queryInterface2.html
+++ b/app/views/queryInterface2.html
@@ -6,7 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="/javascripts/javascripts.js" type = "text/javascript"></script>
     </head>
-    <body onLoad="doSlideshow(); display();">
+    <body onLoad="doSlideshow()">
       <form class="logout" name="logout" action="http://localhost:8081/logout" style="position:fixed;right:10px;top:5px;">
           <input type="submit" value="Log Out">
       </form>
@@ -155,7 +155,6 @@
                           </label>    
                         </section>
                 </form>
-                <span class="sparql"><%= JSON.stringify(sparql) %></span>
                 <?xml version="1.0"?>
                 <sparql xmlns="http://www.w3.org/2005/sparql-results#">
                     <head>
@@ -181,6 +180,8 @@
                 </sparql>
                 <div style="clear: both;"></div>
             </div>
+            <div class="sparql" style="padding: 15px;"><%= sparql %></div>
+            <div style="clear: both;"></div>
         </div>
     </body>
 </html>
