commit for issues encountered

--- a/app/views/queryInterface2.html
+++ b/app/views/queryInterface2.html
@@ -78,6 +78,12 @@
                                 <input id="dbonly" name="dbonly" type="checkbox" />
                             </span>
                         </label>
+
+                        <label>
+                            <span>Search for teams players:
+                                <input id="playersonly" name="playersonly" type="checkbox" />
+                            </span>
+                        </label>
                         
                         <section class="twitterform">
                           <label>
